finished the template

--- a/app/index.html
+++ b/app/index.html
@@ -38,11 +38,12 @@
     <link rel="stylesheet" href="styles/main.css">
   </head>
   <body>
+  <headerwrapper>
     <header class="app-bar promote-layer">
         <div class="container-wrapper">
           <div class="app-bar-container">
             <!--<button class="menu"><img src="images/hamburger.svg" alt="Menu"></button>-->
-              <div class="top-wrapper">
+
                   <div class="top-area">
                     <span class="company-logo"></span>
                     <nav class="top-navigation">
@@ -68,10 +69,10 @@
                         </span>
                     </div>
                   </div>
-              </div>
+
 
             <h1 class="head-slogan">The  <strong>Universe</strong> DOES NOT stand still. Keep up, or die.</h1>
-              <div>
+              <div class="head-items">
               <h1 class="head-slogan-big">
                   The  <strong>Universe</strong><br> <strong style="font-size:larger">DOES NOT</strong> <br>
                   <span style="font-size:78px">stand still.</span>
@@ -79,13 +80,32 @@
       font-size: 50px;
       display: block;">Keep up, or die.</span></h1>
               <div class="big-spaceship">
+                <span>
+                    <b></b>
+                    Disruptuve Propulsion's MicroZPE Twin 
+                    Thruster Retrofit on Origin M50 Interceptor
+                </span>
               </div>
                   <div class="user-expanded">
+                        <span>
+                            <h5 style="color:#3492D8;padding-left: 28px;padding-top: 30px;">
+                            Logged in:
+                            </h5>
+                            <ul>
+                                <li>User</li>
+                                <li>My Account</li>
+                                <li>Service Requests</li>
+                                <li>Maintenance Schedule</li>
+                                <li>Logout</li>
+                            </ul>
+                            <i class="dropdown"></i>
+                        </span>
                   </div>
           </div>
         </div>
         </div>
     </header>
+  </headerwrapper>
       <nav class="small-navigation">
           <ul>
             <li class="selected"><a>Home</a></li>
@@ -116,8 +136,7 @@
         Thruster Retrofit on Origin M50 Interceptor
       </span>
     </div>
-  </main>
-  <articles>
+        <articles>
     <div class="article">
       <img src="/images/site/001_assets_citadel.png">
       <h1>Article title</h1>
@@ -146,7 +165,9 @@
     <img class="second-advert" src="/images/site/001_assets_ad02_portrait.png">
     <img class="third-advert" src="/images/site/001_assets_ad02_landscape.png">
   </advertisements>
+  </main>
 
+<footwrapper>
   <footer style="text-align: center">
     <div class="footer-image">
     
@@ -169,6 +190,7 @@
       
     </div>
   </footer>
+</footwrapper>
 
   <!-- build:js scripts/main.min.js -->
   <script src="scripts/main.js"></script>
